# todo-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/plans/: unit-1-data-layer-code-generation-plan.md  unit-1-data-layer-functional-design-plan.md  unit-1-data-layer-nfr-requirements-plan.md
aidlc-docs/construction/unit-1-data-layer/code/: code-summary.md
aidlc-docs/construction/unit-1-data-layer/functional-design/: business-logic-model.md  business-rules.md  domain-entities.md
aidlc-docs/construction/unit-1-data-layer/nfr-design/: logical-components.md  nfr-design-patterns.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  unit-of-work-plan.md
aidlc-docs/inception/requirements/: requirement-verification-questions.md  requirements.md
tests/: conftest.py  strategies.py
tests/api/: test_server.py  test_service.py  test_tools.py
tests/core/: test_schemas.py
tests/db/: test_repository.py  test_repository_pbt.py
todo_mcp/api/: __init__.py  errors.py  server.py  service.py  tools.py
todo_mcp/core/: config.py  enums.py  exceptions.py  schemas.py
todo_mcp/db/: database.py  models.py  repository.py
todo_mcp/db/migrations/: env.py
(+4 files in other folders)
